--- a/equityboard/assets/main.css
+++ b/equityboard/assets/main.css
@@ -9,7 +9,8 @@
     border-color: #dddddd;
     border-style: outset;
     border-width: 5px;
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 5px;
 }
 
